--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ body.dark button.submit {
     <p>AI/LLM Specialist with 6 years of hands-on experience designing high-quality training data, crafting advanced prompts, and developing evaluation frameworks for large language models. Skilled in NLP data workflows, domain-specific content engineering, and end-to-end curation pipelines that support scalable machine learning initiatives.</p>
     <div class="buttons">
       <!-- <a href="/resume.pdf" class="btn-primary">Download Resume</a> -->
-      <a href="resume.pdf" class="btn-primary" download>Download Resume</a>
+      <a href="Kavya%20Sri%20Gandham%20-%20Resume.pdf" class="btn-primary" download>Download Resume</a>
       <a href="#contact" class="btn-secondary">Contact Me</a>
     </div>
   </div>
@@ -264,5 +264,6 @@ function toggleDark(){
 </script>
 </body>
 </html>
+
 
 
