--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ body.dark button.submit {
     <h2>AI/LLM Specialist • Prompt Engineer • NLP Data Architect</h2>
     <p>AI/LLM Specialist with 6 years of hands-on experience designing high-quality training data, crafting advanced prompts, and developing evaluation frameworks for large language models. Skilled in NLP data workflows, domain-specific content engineering, and end-to-end curation pipelines that support scalable machine learning initiatives.</p>
     <div class="buttons">
-      <a href="/resume.pdf" class="btn-primary">Download Resume</a>
+      <a href="resume.pdf" class="btn-primary">Download Resume</a>
       
       <a href="#contact" class="btn-secondary">Contact Me</a>
     </div>
@@ -264,6 +264,7 @@ function toggleDark(){
 </script>
 </body>
 </html>
+
 
 
 
