--- a/index.html
+++ b/index.html
@@ -62,6 +62,29 @@ body.dark button.submit {
   .btn-secondary{border:1px solid #64748b;color:#cbd5e1;background:transparent;}
   .btn-secondary:hover{background:rgba(124,58,237,0.2);transform:scale(1.05);}
 
+
+.hero-photo {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 1rem;
+}
+
+@media (min-width: 768px) {
+  .hero {
+    flex-direction: row;
+    text-align: left;
+    gap: 2rem;
+  }
+}
+
+
+
+
+
+  
+
   /* ===== Sections ===== */
   h2.section-title{font-size:2rem;font-weight:600;margin-bottom:2rem;text-align:center;color:#fff;}
   .card{background:rgba(255,255,255,0.03);border:1px solid rgba(255,255,255,0.04);backdrop-filter:blur(6px);border-radius:1rem;padding:1rem;margin-bottom:1rem;transition:all 0.3s;}
@@ -265,6 +288,7 @@ function toggleDark(){
 </script>
 </body>
 </html>
+
 
 
 
