--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ body.dark button.submit {
 <section id="about">
   <h2 class="section-title">About</h2>
   <div class="card">
-    <p>AI/LLM Specialist with experience in dataset design, prompt engineering, evaluation frameworks, and automation tools. I create multi-turn dialogues, perform audits, and collaborate with ML engineers to improve model reliability and reduce undesired outputs.</p>
+    <p>AI/LLM Specialist with experience in dataset design, prompt engineering, evaluation frameworks, and automation tools. I create multi-turn dialogues, perform audits, and collaborate with ML engineers to improve model reliability and reduce undesired outputs. Skilled in NLP data workflows, domain-specific content engineering, and end-to-end curation pipelines that support scalable machine learning initiatives. Adept at conducting linguistic, semantic, and behavioral audits to strengthen model accuracy and reduce hallucinations. Experienced in building automated validation tools using Python and collaborating closely with ML engineers, data scientists, and product teams to refine model outputs and enhance real-world reliability.</p>
   </div>
 </section>
 
@@ -290,6 +290,7 @@ function toggleDark(){
 </script>
 </body>
 </html>
+
 
 
 
