--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   /* ===== Reset & Base ===== */
   *{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
   html, body {height:100%;background:#06070b;color:#cbd5e1;scroll-behavior:smooth;}
-  section{padding:6rem 2rem;position:relative;}
+  section{padding:4rem 2rem;position:relative;}
   a {color:inherit;text-decoration:none;}
   ul{list-style:none;}
   img{max-width:100%;display:block;}
@@ -50,7 +50,7 @@ body.dark button.submit {
   /* ===== Hero ===== */
   
   .hero{position:relative;display:flex;flex-direction:column;gap:1.5rem;text-align:center;align-items:center;overflow:hidden;min-height:90vh;justify-content:center;}
-  .hero-content{position:relative;z-index:3;}
+  .hero-content{position:relative;padding-left: 60px;z-index:3;}
   <!-- .hero h1{font-size:3rem;font-weight:bold;color:#fff;} -->
   .hero h1{font-size:3rem;font-weight:bold;background:linear-gradient(90deg,#7c3aed,#00e5ff);-webkit-background-clip:text;color:transparent;animation:neonGlow 2s ease-in-out infinite alternate;}
   .hero h2{font-size:1.2rem;color:#94a3b8;margin-top:0.5rem;}
@@ -63,7 +63,7 @@ body.dark button.submit {
   .btn-secondary:hover{background:rgba(124,58,237,0.2);transform:scale(1.05);}
 
 
-.hero-photo {
+  .hero-photo {
   width: 500px;   /* 3× bigger */
   height: 500px;
   border-radius: 50%;
@@ -80,13 +80,6 @@ body.dark button.submit {
   }
 }
 
-
-
-
-
-
-  
-
   /* ===== Sections ===== */
   h2.section-title{font-size:2rem;font-weight:600;margin-bottom:2rem;text-align:center;color:#fff;}
   .card{background:rgba(255,255,255,0.03);border:1px solid rgba(255,255,255,0.04);backdrop-filter:blur(6px);border-radius:1rem;padding:1rem;margin-bottom:1rem;transition:all 0.3s;}
@@ -100,10 +93,50 @@ body.dark button.submit {
   .skill-bar-inner{height:100%;width:0%;background:linear-gradient(90deg,#7c3aed,#00e5ff);border-radius:6px;transition:width 2s ease-in-out;}
 
   /* ===== Contact ===== */
-  form{display:flex;flex-direction:column;gap:1rem;max-width:500px;margin:auto;}
+  <!-- form{display:flex;flex-direction:column;gap:1rem;max-width:500px;margin:auto;}
   input, textarea{padding:0.7rem;border-radius:0.5rem;border:1px solid #64748b;background:rgba(255,255,255,0.02);color:#fff;width:100%;}
   button.submit{background:linear-gradient(90deg,#7c3aed,#00e5ff);color:#fff;border:none;padding:0.7rem;border-radius:0.5rem;cursor:pointer;transition:all 0.3s;}
-  button.submit:hover{box-shadow:0 0 15px #7c3aed,0 0 25px #00e5ff;transform:scale(1.05);}
+  button.submit:hover{box-shadow:0 0 15px #7c3aed,0 0 25px #00e5ff;transform:scale(1.05);} -->
+  /* Contact Section */
+.contact {
+  text-align: center;
+  padding: 6rem 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+
+/* Button container */
+.contact-links {
+  display: flex;
+  justify-content: center;
+  gap: 1.5rem;
+}
+
+/* Glassmorphism buttons matching your current theme */
+.glass-btn {
+  padding: 14px 32px;
+  background: rgba(255, 255, 255, 0.08);
+  border: 1px solid rgba(255, 255, 255, 0.12);
+  backdrop-filter: blur(10px);
+  border-radius: 12px;
+  color: #fff;
+  font-size: 1.1rem;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+  text-decoration: none;
+  transition: all 0.3s ease;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+/* Hover Glow (same used on cards) */
+.glass-btn:hover {
+  transform: translateY(-4px);
+  box-shadow: 0 0 15px rgba(99, 102, 241, 0.7);
+  border-color: rgba(99, 102, 241, 0.6);
+}
+
 
   /* ===== Floating Background blobs ===== */
   .blob{position:absolute;border-radius:50%;filter:blur(100px);opacity:0.3;animation:blobMove 25s infinite;}
@@ -129,7 +162,7 @@ body.dark button.submit {
 <body>
 
 <header>
-  <div class="logo"><div>S</div>Kavya Sri Gandham</div>
+  <div class="logo"> <a href="#top"><div>K </div></a>Kavya Sri Gandham</div>
   <nav>
     <!-- <button onclick="toggleDark()">Dark</button> -->
     <a href="#contact" class="btn-secondary">Contact</a>
@@ -147,8 +180,8 @@ body.dark button.submit {
       <a href="#contact" class="btn-secondary">Contact Me</a>
     </div>
   </div>
-  <img src="photo.jpeg" alt="Kavya Sri Gandham" class="hero-photo">
-
+  
+<img src="photo.jpeg" alt="Kavya Sri Gandham" class="hero-photo">
   <canvas id="particles"></canvas>
 </section>
 
@@ -156,7 +189,7 @@ body.dark button.submit {
 <section id="about">
   <h2 class="section-title">About</h2>
   <div class="card">
-    <p>AI/LLM Specialist with experience in dataset design, prompt engineering, evaluation frameworks, and automation tools. I create multi-turn dialogues, perform audits, and collaborate with ML engineers to improve model reliability and reduce undesired outputs. Skilled in NLP data workflows, domain-specific content engineering, and end-to-end curation pipelines that support scalable machine learning initiatives. Adept at conducting linguistic, semantic, and behavioral audits to strengthen model accuracy and reduce hallucinations. Experienced in building automated validation tools using Python and collaborating closely with ML engineers, data scientists, and product teams to refine model outputs and enhance real-world reliability.</p>
+    <p>AI/LLM Specialist with experience in dataset design, prompt engineering, evaluation frameworks, and automation tools. I create multi-turn dialogues, perform audits, and collaborate with ML engineers to improve model reliability and reduce undesired outputs.</p>
   </div>
 </section>
 
@@ -224,18 +257,22 @@ body.dark button.submit {
 
 <!-- Contact -->
 <section id="contact">
-  <h2 class="section-title">Contact</h2>
-  <form onsubmit="alert('Demo: replace with real endpoint'); return false;">
-    <input type="text" placeholder="Your name" required>
-    <input type="email" placeholder="Email" required>
-    <textarea placeholder="Message" required></textarea>
-    <button type="submit" class="submit">Send Message</button>
-  </form>
-  <div class="card" style="margin-top:1rem;">
+  <h2 class="section-title">Get In Touch</h2>
+  <section id="contact" class="section contact">
+  <!-- <h2>Contact</h2> -->
+
+  <div class="contact-links">
+    <a href="mailto:kavyasree535@gmail.com" class="glass-btn">Email Me</a>
+    <a href="https://www.linkedin.com/in/kavya-sri-481b1232a" target="_blank" class="glass-btn">LinkedIn</a>
+    <a href="tel:+1(475) 449-6413" target="_blank" class="glass-btn">Call Me</a>
+  </div>
+</section>
+
+  <!-- <div class="card" style="margin-top:1rem;">
     <p>Email: kavyasree535@gmail.com</p>
     <p>Phone: (475) 449-6413</p>
-    <!-- <p>GitHub: <a href="https://github.com/" target="_blank">github.com/</a></p> -->
-  </div>
+    <p>GitHub: <a href="https://github.com/" target="_blank">github.com/</a></p> 
+  </div> -->
 </section>
 
 <footer>© <span id="year"></span> Kavya Sri Gandham — AI/LLM Specialist</footer>
@@ -290,15 +327,4 @@ function toggleDark(){
 </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
 
