--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ body.dark button.submit {
 <section id="about">
   <h2 class="section-title">About</h2>
   <div class="card">
-    <p>AI/LLM Specialist with experience in dataset design, prompt engineering, evaluation frameworks, and automation tools. I create multi-turn dialogues, perform audits, and collaborate with ML engineers to improve model reliability and reduce undesired outputs.</p>
+    <p>AI/LLM Specialist with experience in dataset design, prompt engineering, evaluation frameworks, and automation tools. I create multi-turn dialogues, perform audits, and collaborate with ML engineers to improve model reliability and reduce undesired outputs.Previously, I worked as a Technical Content Writer, where I developed structured taxonomies, metadata systems, API documentation, and multilingual content frameworks—experience that now enhances the precision, clarity, and usability of AI training data.</p>
   </div>
 </section>
 
@@ -327,4 +327,5 @@ function toggleDark(){
 </script>
 </body>
 </html>
+
 
