--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ body.dark button.submit {
 
   <div class="contact-links">
     <a href="mailto:kavyasree535@gmail.com" class="glass-btn">Email Me</a>
-    <a href="https://www.linkedin.com/in/kavya-sri-481b1232a" target="_blank" class="glass-btn">LinkedIn</a>
+    <a href="http://www.linkedin.com/in/kgandham" target="_blank" class="glass-btn">LinkedIn</a>
     <a href="tel:+1(475) 449-6413" target="_blank" class="glass-btn">Call Me</a>
   </div>
 </section>
@@ -327,5 +327,6 @@ function toggleDark(){
 </script>
 </body>
 </html>
+
 
 
